# QtCMakeTemplate

./: CMakeLists.txt  README.md  rename_project.sh
ProjectName/: CMakeLists.txt
ProjectName/src/: mainwindow.cpp
cmake/: FindDependencies.cmake  ProjectSettings.cmake
